--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+haversine==0.4.4
 numpy==1.10.1
 pandas==0.17.0
 pysqlite==2.8.1
 python-dateutil==2.4.2
+pythonTools==0.1
 pytz==2015.7
-pyzipcode==0.4
 six==1.10.0
 wheel==0.24.0
 xlrd==0.9.4
+zipcode==2.0.0
